--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color: yellow;
+  background-color:  #f2f2f2;
   padding: 20px;
 }
 </style>
@@ -43,20 +43,12 @@ div {
 
 <div>
   <form action="/action_page.php">
-<img src="./images/Araba.jpg" alt="Araba">
-
-<label for="Isim">Isim</label>
-<input type="text" id="Isim" name="Isim" placeholder="Isim">
-<label for="Soyism">Soyism</label>
-<input type="text" id="Soyism" name="Soyism" placeholder="Soyism">
-<label for="Yas">Yas</label>
-<input type="text" id="Yas" name="Yas" placeholder="Yas"><p>Favori</p>
-<input type="radio" id="0" name="0" >
-  <label for="0">oyun</label><br><input type="radio" id="1" name="0" >
-  <label for="1">dans</label><br><input type="radio" id="2" name="0" >
-  <label for="2">muzik</label><br>
-<label for="DogumTarihi">DogumTarihi</label>
-<input type="text" id="DogumTarihi" name="DogumTarihi" placeholder="DogumTarihi"><input type="submit" value="Gonder">
+<label for="Selami abinin killi cocugu">Selami abinin killi cocugu</label>
+<input type="text" id="Selami abinin killi cocugu" name="Selami abinin killi cocugu" placeholder="Selami abinin killi cocugu">
+<label for="Kemal dededinin agzi">Kemal dededinin agzi</label>
+<input type="text" id="Kemal dededinin agzi" name="Kemal dededinin agzi" placeholder="Kemal dededinin agzi">
+<label for="yaprak">yaprak</label>
+<input type="text" id="yaprak" name="yaprak" placeholder="yaprak"><input type="submit" value="Gonder">
   </form>
 </div>
 
