new colors and readioButtons added

--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color:  #f2f2f2;
+  background-color: chartreuse;
   padding: 20px;
 }
 </style>
@@ -43,12 +43,23 @@ div {
 
 <div>
   <form action="/action_page.php">
-<label for="Selami abinin killi cocugu">Selami abinin killi cocugu</label>
-<input type="text" id="Selami abinin killi cocugu" name="Selami abinin killi cocugu" placeholder="Selami abinin killi cocugu">
-<label for="Kemal dededinin agzi">Kemal dededinin agzi</label>
-<input type="text" id="Kemal dededinin agzi" name="Kemal dededinin agzi" placeholder="Kemal dededinin agzi">
-<label for="yaprak">yaprak</label>
-<input type="text" id="yaprak" name="yaprak" placeholder="yaprak"><input type="submit" value="Gonder">
+<img src="./images/Araba.jpg" alt="Araba">
+<p>Hangi Kurtlar vadisi karakterisin</p>
+<input type="radio" id="0" name="0" >
+  <label for="0">testere</label><br><input type="radio" id="1" name="0" >
+  <label for="1">polat</label><br><input type="radio" id="2" name="0" >
+  <label for="2">elif</label><br><input type="radio" id="3" name="0" >
+  <label for="3">cakir</label><br><p>En Buyuk takim kim</p>
+<input type="radio" id="4" name="1" >
+  <label for="4">Fenerbahce</label><br><input type="radio" id="5" name="1" >
+  <label for="5">Fenerbahce</label><br><input type="radio" id="6" name="1" >
+  <label for="6">Fenerbahce</label><br>
+<label for="Isim">Isim</label>
+<input type="text" id="Isim" name="Isim" placeholder="Isim">
+<label for="Yas">Yas</label>
+<input type="text" id="Yas" name="Yas" placeholder="Yas">
+<label for="Sehir">Sehir</label>
+<input type="text" id="Sehir" name="Sehir" placeholder="Sehir"><input type="submit" value="Gonder">
   </form>
 </div>
 
