Second form type

--- a/result.html
+++ b/result.html
@@ -59,7 +59,9 @@ div {
 <label for="Yas">Yas</label>
 <input type="text" id="Yas" name="Yas" placeholder="Yas">
 <label for="Sehir">Sehir</label>
-<input type="text" id="Sehir" name="Sehir" placeholder="Sehir"><input type="submit" value="Gonder">
+<input type="text" id="Sehir" name="Sehir" placeholder="Sehir">
+<label for="Plaka">Plaka</label>
+<input type="text" id="Plaka" name="Plaka" placeholder="Plaka"><input type="submit" value="Gonder">
   </form>
 </div>
 
