--- a/result1.html
+++ b/result1.html
@@ -11,12 +11,15 @@ img {  display: block;
 label {
       font-size: 1.2em;
       font-weight: bold;
-      margin-right: 10px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     input[type="text"], input[type="email"], input[type="password"] {
       padding: 10px;
       font-size: 1.2em;
+      margin-left: auto;
+      margin-right: auto;
       margin-bottom: 20px;
       border-radius: 5px;
       border: 1px solid gray;
@@ -64,6 +67,9 @@ div {
 <br/>
 <label for="Sehir">Sehir</label>
 <input type="text" id="Sehir" name="Sehir" placeholder="Sehir"> 
+<br/>
+<label for="Plaka">Plaka</label>
+<input type="text" id="Plaka" name="Plaka" placeholder="Plaka"> 
 <br/><input type="submit" value="Gonder">
   </form>
 </div>
