--- a/result1.html
+++ b/result1.html
@@ -11,15 +11,12 @@ img {  display: block;
 label {
       font-size: 1.2em;
       font-weight: bold;
-      margin-left: auto;
-      margin-right: auto;
+      margin-right: 10px;
     }
 
     input[type="text"], input[type="email"], input[type="password"] {
       padding: 10px;
       font-size: 1.2em;
-      margin-left: auto;
-      margin-right: auto;
       margin-bottom: 20px;
       border-radius: 5px;
       border: 1px solid gray;
@@ -39,7 +36,9 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color: chartreuse;
+  display:flex;
+  align-items: center;
+  justify-content: center;  background-color: chartreuse;
   padding: 20px;
 }
 </style>
