--- a/result1.html
+++ b/result1.html
@@ -38,8 +38,15 @@ div {
   border-radius: 5px;
   display:flex;
   align-items: center;
-  justify-content: center;  background-color: chartreuse;
+  justify-content: center;
+  background-color: chartreuse;
   padding: 20px;
+}
+form {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 </style>
 <body>
