--- a/result.html
+++ b/result.html
@@ -45,10 +45,10 @@ div {
   <form action="/action_page.php">
 <img src="./images/Araba.jpg" alt="Araba">
 <p>Hangi Kurtlar vadisi karakterisin</p>
-<input type="radio" id="0" name="0" >
-  <label for="0">testere</label><br><input type="radio" id="1" name="0" >
-  <label for="1">polat</label><br><input type="radio" id="2" name="0" >
-  <label for="2">elif</label><br><input type="radio" id="3" name="0" >
+<input type="checkbox" id="0" name="0" >
+  <label for="0">testere</label><br><input type="checkbox" id="1" name="0" >
+  <label for="1">polat</label><br><input type="checkbox" id="2" name="0" >
+  <label for="2">elif</label><br><input type="checkbox" id="3" name="0" >
   <label for="3">cakir</label><br><p>En Buyuk takim kim</p>
 <input type="radio" id="4" name="1" >
   <label for="4">Fenerbahce</label><br><input type="radio" id="5" name="1" >
