new txt files genareted

--- a/result.html
+++ b/result.html
@@ -61,7 +61,13 @@ div {
 <label for="Sehir">Sehir</label>
 <input type="text" id="Sehir" name="Sehir" placeholder="Sehir">
 <label for="Plaka">Plaka</label>
-<input type="text" id="Plaka" name="Plaka" placeholder="Plaka"><input type="submit" value="Gonder">
+<input type="text" id="Plaka" name="Plaka" placeholder="Plaka">
+<label for="DogumTarihi">DogumTarihi</label>
+<input type="text" id="DogumTarihi" name="DogumTarihi" placeholder="DogumTarihi">
+<label for="DogumYeri">DogumYeri</label>
+<input type="text" id="DogumYeri" name="DogumYeri" placeholder="DogumYeri">
+<label for="EnYakinArkadas">EnYakinArkadas</label>
+<input type="text" id="EnYakinArkadas" name="EnYakinArkadas" placeholder="EnYakinArkadas"><input type="submit" value="Gonder">
   </form>
 </div>
 
