--- a/result1.html
+++ b/result1.html
@@ -76,6 +76,15 @@ form {
 <br/>
 <label for="Plaka">Plaka</label>
 <input type="text" id="Plaka" name="Plaka" placeholder="Plaka"> 
+<br/>
+<label for="DogumTarihi">DogumTarihi</label>
+<input type="text" id="DogumTarihi" name="DogumTarihi" placeholder="DogumTarihi"> 
+<br/>
+<label for="DogumYeri">DogumYeri</label>
+<input type="text" id="DogumYeri" name="DogumYeri" placeholder="DogumYeri"> 
+<br/>
+<label for="EnYakinArkadas">EnYakinArkadas</label>
+<input type="text" id="EnYakinArkadas" name="EnYakinArkadas" placeholder="EnYakinArkadas"> 
 <br/><input type="submit" value="Gonder">
   </form>
 </div>
