--- a/result.html
+++ b/result.html
@@ -47,16 +47,16 @@ div {
         <p>Hangi Kurtlar vadisi karakterisin</p>
         <div class="checkAndRadio">
             <input type="checkbox" id="0" name="0" >
-               <label for="0">testere</label>        
+               <label for="0">Testere</label>        
                 <br>
             <input type="checkbox" id="1" name="0" >
-               <label for="1">polat</label>        
+               <label for="1">Polat</label>        
                 <br>
             <input type="checkbox" id="2" name="0" >
-               <label for="2">elif</label>        
+               <label for="2">Elif</label>        
                 <br>
             <input type="checkbox" id="3" name="0" >
-               <label for="3">cakir</label>        
+               <label for="3">Cakir</label>        
                 <br>
         </div>
         <p>En Buyuk takim kim</p>
@@ -85,7 +85,9 @@ div {
 <label for="DogumYeri">DogumYeri</label>
 <input type="text" id="DogumYeri" name="DogumYeri" placeholder="DogumYeri">
 <label for="EnYakinArkadas">EnYakinArkadas</label>
-<input type="text" id="EnYakinArkadas" name="EnYakinArkadas" placeholder="EnYakinArkadas"><input type="submit" value="Gonder">
+<input type="text" id="EnYakinArkadas" name="EnYakinArkadas" placeholder="EnYakinArkadas">
+<label for="BagcikSayisi">BagcikSayisi</label>
+<input type="text" id="BagcikSayisi" name="BagcikSayisi" placeholder="BagcikSayisi"><input type="submit" value="Gonder">
   </form>
 </div>
 
