--- a/result1.html
+++ b/result1.html
@@ -40,7 +40,7 @@
        display:flex;
        align-items: center;
        justify-content: center;
-       background-color: aqua;
+       background-color: yellow;
        padding: 20px;
    }
    form {
@@ -59,58 +59,17 @@
 
 <div>
   <form action="/action_page.php">
-        <img src="./images/Araba.jpg" alt="Araba">
-        <p>Hangi Kurtlar vadisi karakterisin</p>
-        <div class="checkAndRadio">
-            <input type="checkbox" id="0" name="0" >
-               <label for="0">Testere</label>        
-                <br>
-            <input type="checkbox" id="1" name="0" >
-               <label for="1">Polat</label>        
-                <br>
-            <input type="checkbox" id="2" name="0" >
-               <label for="2">Elif</label>        
-                <br>
-            <input type="checkbox" id="3" name="0" >
-               <label for="3">Cakir</label>        
-                <br>
-        </div>
-        <p>En Buyuk takim kim</p>
-        <div class="checkAndRadio">
-            <input type="radio" id="4" name="1" >
-               <label for="4">Fenerbahce</label>
-                <br>
-            <input type="radio" id="5" name="1" >
-               <label for="5">Fenerbahce</label>
-                <br>
-            <input type="radio" id="6" name="1" >
-               <label for="6">Fenerbahce</label>
-                <br>
-        </div>
-
         <label for="Isim">Isim</label>
         <input type="text" id="Isim" name="Isim" placeholder="Isim"> 
         <br/>
         <label for="Yas">Yas</label>
         <input type="text" id="Yas" name="Yas" placeholder="Yas"> 
         <br/>
-        <label for="Sehir">Sehir</label>
-        <input type="text" id="Sehir" name="Sehir" placeholder="Sehir"> 
+        <label for="Soyism">Soyism</label>
+        <input type="text" id="Soyism" name="Soyism" placeholder="Soyism"> 
         <br/>
-        <label for="Plaka">Plaka</label>
-        <input type="text" id="Plaka" name="Plaka" placeholder="Plaka"> 
-        <br/>
-        <label for="DogumTarihi">DogumTarihi</label>
-        <input type="text" id="DogumTarihi" name="DogumTarihi" placeholder="DogumTarihi"> 
-        <br/>
-        <label for="DogumYeri">DogumYeri</label>
-        <input type="text" id="DogumYeri" name="DogumYeri" placeholder="DogumYeri"> 
-        <br/>
-        <label for="EnYakinArkadas">EnYakinArkadas</label>
-        <input type="text" id="EnYakinArkadas" name="EnYakinArkadas" placeholder="EnYakinArkadas"> 
-        <br/>
-        <label for="BagcikSayisi">BagcikSayisi</label>
-        <input type="text" id="BagcikSayisi" name="BagcikSayisi" placeholder="BagcikSayisi"> 
+        <label for="Telefon">Telefon</label>
+        <input type="text" id="Telefon" name="Telefon" placeholder="Telefon"> 
         <br/>        <input type="submit" value="Gonder">
    </form>
 </div>
