--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color: yellow;
+  background-color: red;
   padding: 20px;
 }
 </style>
@@ -43,14 +43,44 @@ div {
 
 <div>
   <form action="/action_page.php">
+        <img src="./images/Araba.jpg" alt="Araba">
+
+<label for="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi">Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi</label>
+<input type="text" id="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" name="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" placeholder="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi">
 <label for="Isim">Isim</label>
 <input type="text" id="Isim" name="Isim" placeholder="Isim">
+<label for="AyakkabiMarkasi">AyakkabiMarkasi</label>
+<input type="text" id="AyakkabiMarkasi" name="AyakkabiMarkasi" placeholder="AyakkabiMarkasi">
 <label for="Yas">Yas</label>
 <input type="text" id="Yas" name="Yas" placeholder="Yas">
 <label for="Soyism">Soyism</label>
 <input type="text" id="Soyism" name="Soyism" placeholder="Soyism">
 <label for="Telefon">Telefon</label>
-<input type="text" id="Telefon" name="Telefon" placeholder="Telefon"><input type="submit" value="Gonder">
+<input type="text" id="Telefon" name="Telefon" placeholder="Telefon">        <p>En Buyuk Takim Kim</p>
+        <div class="checkAndRadio">
+            <input type="radio" id="0" name="0" >
+               <label for="0">Fenerbahce</label>
+                <br>
+            <input type="radio" id="1" name="0" >
+               <label for="1">Fenerbahce</label>
+                <br>
+            <input type="radio" id="2" name="0" >
+               <label for="2">Fenerbahce</label>
+                <br>
+        </div>
+        <p>En Buyuk Takim Kim</p>
+        <div class="checkAndRadio">
+            <input type="checkbox" id="3" name="1" >
+               <label for="3">Fenerbahce</label>        
+                <br>
+            <input type="checkbox" id="4" name="1" >
+               <label for="4">Fenerbahce</label>        
+                <br>
+            <input type="checkbox" id="5" name="1" >
+               <label for="5">Fenerbahce</label>        
+                <br>
+        </div>
+<input type="submit" value="Gonder">
   </form>
 </div>
 
