--- a/result1.html
+++ b/result1.html
@@ -48,7 +48,7 @@
        display:flex;
        align-items: center;
        justify-content: center;
-       background-color: yellow;
+       background-color: red;
        width: 60%;
        padding: 20px;
    }
@@ -69,8 +69,16 @@
 <div>
 <div class= "formdiv">
   <form action="/action_page.php">
+        <img src="./images/Araba.jpg" alt="Araba">
+
+        <label for="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi">Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi</label>
+        <input type="text" id="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" name="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" placeholder="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi"> 
+        <br/>
         <label for="Isim">Isim</label>
         <input type="text" id="Isim" name="Isim" placeholder="Isim"> 
+        <br/>
+        <label for="AyakkabiMarkasi">AyakkabiMarkasi</label>
+        <input type="text" id="AyakkabiMarkasi" name="AyakkabiMarkasi" placeholder="AyakkabiMarkasi"> 
         <br/>
         <label for="Yas">Yas</label>
         <input type="text" id="Yas" name="Yas" placeholder="Yas"> 
@@ -80,7 +88,31 @@
         <br/>
         <label for="Telefon">Telefon</label>
         <input type="text" id="Telefon" name="Telefon" placeholder="Telefon"> 
-        <br/>        <input type="submit" value="Gonder">
+        <br/>        <p>En Buyuk Takim Kim</p>
+        <div class="checkAndRadio">
+            <input type="radio" id="0" name="0" >
+               <label for="0">Fenerbahce</label>
+                <br>
+            <input type="radio" id="1" name="0" >
+               <label for="1">Fenerbahce</label>
+                <br>
+            <input type="radio" id="2" name="0" >
+               <label for="2">Fenerbahce</label>
+                <br>
+        </div>
+        <p>En Buyuk Takim Kim</p>
+        <div class="checkAndRadio">
+            <input type="checkbox" id="3" name="1" >
+               <label for="3">Fenerbahce</label>        
+                <br>
+            <input type="checkbox" id="4" name="1" >
+               <label for="4">Fenerbahce</label>        
+                <br>
+            <input type="checkbox" id="5" name="1" >
+               <label for="5">Fenerbahce</label>        
+                <br>
+        </div>
+        <input type="submit" value="Gonder">
    </form>
 </div>
 </div>
