--- a/result2.html
+++ b/result2.html
@@ -40,7 +40,7 @@
        border-radius: 20px;
        padding: 40px;
        box-sizing: border-box;
-       background: yellow;
+       background: red;
        box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
    }
 
@@ -101,8 +101,16 @@
 
 <div class="container">
   <div class="inputs">
+        <img src="./images/Araba.jpg" alt="Araba">
+
+        <label for="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi">Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi</label>
+        <input type="text" id="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" name="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" placeholder="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi"> 
+        <br/>
         <label for="Isim">Isim</label>
         <input type="text" id="Isim" name="Isim" placeholder="Isim"> 
+        <br/>
+        <label for="AyakkabiMarkasi">AyakkabiMarkasi</label>
+        <input type="text" id="AyakkabiMarkasi" name="AyakkabiMarkasi" placeholder="AyakkabiMarkasi"> 
         <br/>
         <label for="Yas">Yas</label>
         <input type="text" id="Yas" name="Yas" placeholder="Yas"> 
@@ -112,7 +120,31 @@
         <br/>
         <label for="Telefon">Telefon</label>
         <input type="text" id="Telefon" name="Telefon" placeholder="Telefon"> 
-        <br/>        <button type="submit">Gonder</button>
+        <br/>        <p>En Buyuk Takim Kim</p>
+        <div class="checkAndRadio">
+            <input type="radio" id="0" name="0" >
+               <label for="0">Fenerbahce</label>
+                <br>
+            <input type="radio" id="1" name="0" >
+               <label for="1">Fenerbahce</label>
+                <br>
+            <input type="radio" id="2" name="0" >
+               <label for="2">Fenerbahce</label>
+                <br>
+        </div>
+        <p>En Buyuk Takim Kim</p>
+        <div class="checkAndRadio">
+            <input type="checkbox" id="3" name="1" >
+               <label for="3">Fenerbahce</label>        
+                <br>
+            <input type="checkbox" id="4" name="1" >
+               <label for="4">Fenerbahce</label>        
+                <br>
+            <input type="checkbox" id="5" name="1" >
+               <label for="5">Fenerbahce</label>        
+                <br>
+        </div>
+        <button type="submit">Gonder</button>
    </div>
 </div>
 
