--- a/result1.html
+++ b/result1.html
@@ -48,7 +48,7 @@
        display:flex;
        align-items: center;
        justify-content: center;
-       background-color: red;
+       background-color: aqua;
        width: 60%;
        padding: 20px;
    }
@@ -68,26 +68,23 @@
 
 <div>
 <div class= "formdiv">
-  <form action="/action_page.php">
+  <form >
         <img src="./images/Araba.jpg" alt="Araba">
 
-        <label for="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi">Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi</label>
-        <input type="text" id="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" name="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" placeholder="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi"> 
+        <label for="Maas Beklntisi">Maas Beklntisi</label>
+        <input type="text" id="6" name="Maas Beklntisi" placeholder="Maas Beklntisi"> 
         <br/>
         <label for="Isim">Isim</label>
-        <input type="text" id="Isim" name="Isim" placeholder="Isim"> 
-        <br/>
-        <label for="AyakkabiMarkasi">AyakkabiMarkasi</label>
-        <input type="text" id="AyakkabiMarkasi" name="AyakkabiMarkasi" placeholder="AyakkabiMarkasi"> 
+        <input type="text" id="7" name="Isim" placeholder="Isim"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="Yas" name="Yas" placeholder="Yas"> 
+        <input type="text" id="8" name="Yas" placeholder="Yas"> 
         <br/>
         <label for="Soyism">Soyism</label>
-        <input type="text" id="Soyism" name="Soyism" placeholder="Soyism"> 
+        <input type="text" id="9" name="Soyism" placeholder="Soyism"> 
         <br/>
         <label for="Telefon">Telefon</label>
-        <input type="text" id="Telefon" name="Telefon" placeholder="Telefon"> 
+        <input type="text" id="10" name="Telefon" placeholder="Telefon"> 
         <br/>        <p>En Buyuk Takim Kim</p>
         <div class="checkAndRadio">
             <input type="radio" id="0" name="0" >
@@ -112,10 +109,10 @@
                <label for="5">Fenerbahce</label>        
                 <br>
         </div>
-        <input type="submit" value="Gonder">
+        <input id="submit" type="submit" value="Gonder">
    </form>
 </div>
 </div>
 
-</body>
+<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script><script src="./main.js"></script></body>
 </html>
