--- a/result2.html
+++ b/result2.html
@@ -40,7 +40,7 @@
        border-radius: 20px;
        padding: 40px;
        box-sizing: border-box;
-       background: red;
+       background: aqua;
        box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
    }
 
@@ -103,23 +103,20 @@
   <div class="inputs">
         <img src="./images/Araba.jpg" alt="Araba">
 
-        <label for="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi">Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi</label>
-        <input type="text" id="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" name="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi" placeholder="Maas gsgnkglgdsngdsnklgdnkgdsklgdskgldsjgsjgoisjdgpsjgsd;lgdsgBeklntisi"> 
+        <label for="Maas Beklntisi">Maas Beklntisi</label>
+        <input type="text" id="6" name="Maas Beklntisi" placeholder="Maas Beklntisi"> 
         <br/>
         <label for="Isim">Isim</label>
-        <input type="text" id="Isim" name="Isim" placeholder="Isim"> 
-        <br/>
-        <label for="AyakkabiMarkasi">AyakkabiMarkasi</label>
-        <input type="text" id="AyakkabiMarkasi" name="AyakkabiMarkasi" placeholder="AyakkabiMarkasi"> 
+        <input type="text" id="7" name="Isim" placeholder="Isim"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="Yas" name="Yas" placeholder="Yas"> 
+        <input type="text" id="8" name="Yas" placeholder="Yas"> 
         <br/>
         <label for="Soyism">Soyism</label>
-        <input type="text" id="Soyism" name="Soyism" placeholder="Soyism"> 
+        <input type="text" id="9" name="Soyism" placeholder="Soyism"> 
         <br/>
         <label for="Telefon">Telefon</label>
-        <input type="text" id="Telefon" name="Telefon" placeholder="Telefon"> 
+        <input type="text" id="10" name="Telefon" placeholder="Telefon"> 
         <br/>        <p>En Buyuk Takim Kim</p>
         <div class="checkAndRadio">
             <input type="radio" id="0" name="0" >
@@ -144,9 +141,9 @@
                <label for="5">Fenerbahce</label>        
                 <br>
         </div>
-        <button type="submit">Gonder</button>
+        <button id="submit" type="submit">Gonder</button>
    </div>
 </div>
 
 </body>
-</html>
+<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script><script src="./main.js"></script></html>
