--- a/result1.html
+++ b/result1.html
@@ -48,7 +48,7 @@
        display:flex;
        align-items: center;
        justify-content: center;
-       background-color: aqua;
+       background-color:  #f2f2f2;
        width: 60%;
        padding: 20px;
    }
@@ -69,47 +69,12 @@
 <div>
 <div class= "formdiv">
   <form >
-        <img src="./images/Araba.jpg" alt="Araba">
-
-        <label for="Maas Beklntisi">Maas Beklntisi</label>
-        <input type="text" id="6" name="Maas Beklntisi" placeholder="Maas Beklntisi"> 
-        <br/>
-        <label for="Isim">Isim</label>
-        <input type="text" id="7" name="Isim" placeholder="Isim"> 
+        <label for="MataraHacmi">MataraHacmi</label>
+        <input type="text" id="0" name="MataraHacmi" placeholder="MataraHacmi"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="8" name="Yas" placeholder="Yas"> 
-        <br/>
-        <label for="Soyism">Soyism</label>
-        <input type="text" id="9" name="Soyism" placeholder="Soyism"> 
-        <br/>
-        <label for="Telefon">Telefon</label>
-        <input type="text" id="10" name="Telefon" placeholder="Telefon"> 
-        <br/>        <p>En Buyuk Takim Kim</p>
-        <div class="checkAndRadio">
-            <input type="radio" id="0" name="0" >
-               <label for="0">Fenerbahce</label>
-                <br>
-            <input type="radio" id="1" name="0" >
-               <label for="1">Fenerbahce</label>
-                <br>
-            <input type="radio" id="2" name="0" >
-               <label for="2">Fenerbahce</label>
-                <br>
-        </div>
-        <p>En Buyuk Takim Kim</p>
-        <div class="checkAndRadio">
-            <input type="checkbox" id="3" name="1" >
-               <label for="3">Fenerbahce</label>        
-                <br>
-            <input type="checkbox" id="4" name="1" >
-               <label for="4">Fenerbahce</label>        
-                <br>
-            <input type="checkbox" id="5" name="1" >
-               <label for="5">Fenerbahce</label>        
-                <br>
-        </div>
-        <input id="submit" type="submit" value="Gonder">
+        <input type="text" id="1" name="Yas" placeholder="Yas"> 
+        <br/>        <input id="submit" type="submit" value="Gonder">
    </form>
 </div>
 </div>
