--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color: aqua;
+  background-color:  #f2f2f2;
   padding: 20px;
 }
 </style>
@@ -43,42 +43,10 @@ div {
 
 <div>
   <form >
-        <img src="./images/Araba.jpg" alt="Araba">
-
-<label for="Maas Beklntisi">Maas Beklntisi</label>
-<input type="text" id="6" name="Maas Beklntisi" placeholder="Maas Beklntisi">
-<label for="Isim">Isim</label>
-<input type="text" id="7" name="Isim" placeholder="Isim">
+<label for="MataraHacmi">MataraHacmi</label>
+<input type="text" id="0" name="MataraHacmi" placeholder="MataraHacmi">
 <label for="Yas">Yas</label>
-<input type="text" id="8" name="Yas" placeholder="Yas">
-<label for="Soyism">Soyism</label>
-<input type="text" id="9" name="Soyism" placeholder="Soyism">
-<label for="Telefon">Telefon</label>
-<input type="text" id="10" name="Telefon" placeholder="Telefon">        <p>En Buyuk Takim Kim</p>
-        <div class="checkAndRadio">
-            <input type="radio" id="0" name="0" >
-               <label for="0">Fenerbahce</label>
-                <br>
-            <input type="radio" id="1" name="0" >
-               <label for="1">Fenerbahce</label>
-                <br>
-            <input type="radio" id="2" name="0" >
-               <label for="2">Fenerbahce</label>
-                <br>
-        </div>
-        <p>En Buyuk Takim Kim</p>
-        <div class="checkAndRadio">
-            <input type="checkbox" id="3" name="1" >
-               <label for="3">Fenerbahce</label>        
-                <br>
-            <input type="checkbox" id="4" name="1" >
-               <label for="4">Fenerbahce</label>        
-                <br>
-            <input type="checkbox" id="5" name="1" >
-               <label for="5">Fenerbahce</label>        
-                <br>
-        </div>
-<input id="submit" type="submit" value="Gonder">
+<input type="text" id="1" name="Yas" placeholder="Yas"><input id="submit" type="submit" value="Gonder">
   </form>
 </div>
 
