--- a/result2.html
+++ b/result2.html
@@ -40,7 +40,7 @@
        border-radius: 20px;
        padding: 40px;
        box-sizing: border-box;
-       background: aqua;
+       background:  #f2f2f2;
        box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
    }
 
@@ -101,47 +101,12 @@
 
 <div class="container">
   <div class="inputs">
-        <img src="./images/Araba.jpg" alt="Araba">
-
-        <label for="Maas Beklntisi">Maas Beklntisi</label>
-        <input type="text" id="6" name="Maas Beklntisi" placeholder="Maas Beklntisi"> 
-        <br/>
-        <label for="Isim">Isim</label>
-        <input type="text" id="7" name="Isim" placeholder="Isim"> 
+        <label for="MataraHacmi">MataraHacmi</label>
+        <input type="text" id="0" name="MataraHacmi" placeholder="MataraHacmi"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="8" name="Yas" placeholder="Yas"> 
-        <br/>
-        <label for="Soyism">Soyism</label>
-        <input type="text" id="9" name="Soyism" placeholder="Soyism"> 
-        <br/>
-        <label for="Telefon">Telefon</label>
-        <input type="text" id="10" name="Telefon" placeholder="Telefon"> 
-        <br/>        <p>En Buyuk Takim Kim</p>
-        <div class="checkAndRadio">
-            <input type="radio" id="0" name="0" >
-               <label for="0">Fenerbahce</label>
-                <br>
-            <input type="radio" id="1" name="0" >
-               <label for="1">Fenerbahce</label>
-                <br>
-            <input type="radio" id="2" name="0" >
-               <label for="2">Fenerbahce</label>
-                <br>
-        </div>
-        <p>En Buyuk Takim Kim</p>
-        <div class="checkAndRadio">
-            <input type="checkbox" id="3" name="1" >
-               <label for="3">Fenerbahce</label>        
-                <br>
-            <input type="checkbox" id="4" name="1" >
-               <label for="4">Fenerbahce</label>        
-                <br>
-            <input type="checkbox" id="5" name="1" >
-               <label for="5">Fenerbahce</label>        
-                <br>
-        </div>
-        <button id="submit" type="submit">Gonder</button>
+        <input type="text" id="1" name="Yas" placeholder="Yas"> 
+        <br/>        <button id="submit" type="submit">Gonder</button>
    </div>
 </div>
 
