--- a/result2.html
+++ b/result2.html
@@ -101,11 +101,14 @@
 
 <div class="container">
   <div class="inputs">
-        <label for="MataraHacmi">MataraHacmi</label>
-        <input type="text" id="0" name="MataraHacmi" placeholder="MataraHacmi"> 
+        <label for="Isim">Isim</label>
+        <input type="text" id="0" name="Isim" placeholder="Isim"> 
+        <br/>
+        <label for="Soyism">Soyism</label>
+        <input type="text" id="1" name="Soyism" placeholder="Soyism"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="1" name="Yas" placeholder="Yas"> 
+        <input type="text" id="2" name="Yas" placeholder="Yas"> 
         <br/>        <button id="submit" type="submit">Gonder</button>
    </div>
 </div>
