--- a/result.html
+++ b/result.html
@@ -43,10 +43,12 @@ div {
 
 <div>
   <form >
-<label for="MataraHacmi">MataraHacmi</label>
-<input type="text" id="0" name="MataraHacmi" placeholder="MataraHacmi">
+<label for="Isim">Isim</label>
+<input type="text" id="0" name="Isim" placeholder="Isim">
+<label for="Soyism">Soyism</label>
+<input type="text" id="1" name="Soyism" placeholder="Soyism">
 <label for="Yas">Yas</label>
-<input type="text" id="1" name="Yas" placeholder="Yas"><input id="submit" type="submit" value="Gonder">
+<input type="text" id="2" name="Yas" placeholder="Yas"><input id="submit" type="submit" value="Gonder">
   </form>
 </div>
 
