--- a/result1.html
+++ b/result1.html
@@ -69,11 +69,14 @@
 <div>
 <div class= "formdiv">
   <form >
-        <label for="MataraHacmi">MataraHacmi</label>
-        <input type="text" id="0" name="MataraHacmi" placeholder="MataraHacmi"> 
+        <label for="Isim">Isim</label>
+        <input type="text" id="0" name="Isim" placeholder="Isim"> 
+        <br/>
+        <label for="Soyism">Soyism</label>
+        <input type="text" id="1" name="Soyism" placeholder="Soyism"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="1" name="Yas" placeholder="Yas"> 
+        <input type="text" id="2" name="Yas" placeholder="Yas"> 
         <br/>        <input id="submit" type="submit" value="Gonder">
    </form>
 </div>
