--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color:  #f2f2f2;
+  background-color: yellow;
   padding: 20px;
 }
 </style>
@@ -43,12 +43,33 @@ div {
 
 <div>
   <form >
+        <img src="./images/Mehmet.jpg" alt="Mehmet">
+
 <label for="Isim">Isim</label>
-<input type="text" id="0" name="Isim" placeholder="Isim">
+<input type="text" id="4" name="Isim" placeholder="Isim">
 <label for="Soyism">Soyism</label>
-<input type="text" id="1" name="Soyism" placeholder="Soyism">
+<input type="text" id="5" name="Soyism" placeholder="Soyism">
+<label for="OgrenciNo">OgrenciNo</label>
+<input type="text" id="6" name="OgrenciNo" placeholder="OgrenciNo">
 <label for="Yas">Yas</label>
-<input type="text" id="2" name="Yas" placeholder="Yas"><input id="submit" type="submit" value="Gonder">
+<input type="text" id="7" name="Yas" placeholder="Yas">
+<label for="Email">Email</label>
+<input type="text" id="8" name="Email" placeholder="Email">        <p>En sevdigin Ulke</p>
+        <div class="checkAndRadio">
+            <input type="radio" id="0" name="0" >
+               <label for="0">Italya</label>
+                <br>
+            <input type="radio" id="1" name="0" >
+               <label for="1">Turkiye</label>
+                <br>
+            <input type="radio" id="2" name="0" >
+               <label for="2">Amerika</label>
+                <br>
+            <input type="radio" id="3" name="0" >
+               <label for="3">Israil</label>
+                <br>
+        </div>
+<input id="submit" type="submit" value="Gonder">
   </form>
 </div>
 
