--- a/result2.html
+++ b/result2.html
@@ -40,7 +40,7 @@
        border-radius: 20px;
        padding: 40px;
        box-sizing: border-box;
-       background:  #f2f2f2;
+       background: yellow;
        box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
    }
 
@@ -101,15 +101,38 @@
 
 <div class="container">
   <div class="inputs">
+        <img src="./images/Mehmet.jpg" alt="Mehmet">
+
         <label for="Isim">Isim</label>
-        <input type="text" id="0" name="Isim" placeholder="Isim"> 
+        <input type="text" id="4" name="Isim" placeholder="Isim"> 
         <br/>
         <label for="Soyism">Soyism</label>
-        <input type="text" id="1" name="Soyism" placeholder="Soyism"> 
+        <input type="text" id="5" name="Soyism" placeholder="Soyism"> 
+        <br/>
+        <label for="OgrenciNo">OgrenciNo</label>
+        <input type="text" id="6" name="OgrenciNo" placeholder="OgrenciNo"> 
         <br/>
         <label for="Yas">Yas</label>
-        <input type="text" id="2" name="Yas" placeholder="Yas"> 
-        <br/>        <button id="submit" type="submit">Gonder</button>
+        <input type="text" id="7" name="Yas" placeholder="Yas"> 
+        <br/>
+        <label for="Email">Email</label>
+        <input type="text" id="8" name="Email" placeholder="Email"> 
+        <br/>        <p>En sevdigin Ulke</p>
+        <div class="checkAndRadio">
+            <input type="radio" id="0" name="0" >
+               <label for="0">Italya</label>
+                <br>
+            <input type="radio" id="1" name="0" >
+               <label for="1">Turkiye</label>
+                <br>
+            <input type="radio" id="2" name="0" >
+               <label for="2">Amerika</label>
+                <br>
+            <input type="radio" id="3" name="0" >
+               <label for="3">Israil</label>
+                <br>
+        </div>
+        <button id="submit" type="submit">Gonder</button>
    </div>
 </div>
 
