--- a/result1.html
+++ b/result1.html
@@ -48,7 +48,7 @@
        display:flex;
        align-items: center;
        justify-content: center;
-       background-color: yellow;
+       background-color: green;
        width: 60%;
        padding: 20px;
    }
@@ -69,38 +69,20 @@
 <div>
 <div class= "formdiv">
   <form >
-        <img src="./images/Mehmet.jpg" alt="Mehmet">
+        <img src="./images/Erkan.jpg" alt="Erkan">
 
         <label for="Isim">Isim</label>
-        <input type="text" id="4" name="Isim" placeholder="Isim"> 
+        <input type="text" id="0" name="Isim" placeholder="Isim"> 
         <br/>
         <label for="Soyism">Soyism</label>
-        <input type="text" id="5" name="Soyism" placeholder="Soyism"> 
-        <br/>
-        <label for="OgrenciNo">OgrenciNo</label>
-        <input type="text" id="6" name="OgrenciNo" placeholder="OgrenciNo"> 
-        <br/>
-        <label for="Yas">Yas</label>
-        <input type="text" id="7" name="Yas" placeholder="Yas"> 
+        <input type="text" id="1" name="Soyism" placeholder="Soyism"> 
         <br/>
         <label for="Email">Email</label>
-        <input type="text" id="8" name="Email" placeholder="Email"> 
-        <br/>        <p>En sevdigin Ulke</p>
-        <div class="checkAndRadio">
-            <input type="radio" id="0" name="0" >
-               <label for="0">Italya</label>
-                <br>
-            <input type="radio" id="1" name="0" >
-               <label for="1">Turkiye</label>
-                <br>
-            <input type="radio" id="2" name="0" >
-               <label for="2">Amerika</label>
-                <br>
-            <input type="radio" id="3" name="0" >
-               <label for="3">Israil</label>
-                <br>
-        </div>
-        <input id="submit" type="submit" value="Gonder">
+        <input type="text" id="2" name="Email" placeholder="Email"> 
+        <br/>
+        <label for="Sifre">Sifre</label>
+        <input type="text" id="3" name="Sifre" placeholder="Sifre"> 
+        <br/>        <input id="submit" type="submit" value="Gonder">
    </form>
 </div>
 </div>
