--- a/chatGPT.html
+++ b/chatGPT.html
@@ -5,7 +5,7 @@
   <style>
     /* Add background color for body element */
     body {
-      background-color: #FFFF00;
+      background-color: #00FF00;
     }
     /* Add styles for image */
     img{
@@ -21,22 +21,13 @@
       display: block;
       margin-bottom: 10px;
     }
-    input[type="text"], input[type="number"], input[type="email"] {
+    input[type="text"], input[type="email"], input[type="password"] {
       width: 100%;
       padding: 12px 20px;
       margin: 8px 0;
       box-sizing: border-box;
       border: 2px solid #ccc;
       border-radius: 4px;
-    }
-    /* Add styles for checkbox group */
-    .favorite-country {
-      display: flex;
-      flex-wrap: wrap;
-    }
-    .favorite-country label {
-      flex: 1;
-      margin-right: 10px;
     }
     /* Add styles for submit button */
     input[type="submit"] {
@@ -55,36 +46,17 @@
   </style>
 </head>
 <body>
-<img src="https://images.unsplash.com/photo-1586458085143-b0c7d8b874e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" alt="Car Image">
+  <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Apple Image">
   <form>
     <label for="name">Name:</label>
     <input type="text" id="name" name="name"><br><br>
     <label for="surname">Surname:</label>
     <input type="text" id="surname" name="surname"><br><br>
-    <label for="student-number">Student Number:</label>
-    <input type="number" id="student-number" name="student-number"><br><br>
-    <label for="age">Age:</label>
-    <input type="number" id="age" name="age"><br><br>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email"><br><br>
-    <label>Favorite country:</label>
-    <div class="favorite-country">
-      <label>
-        <input type="checkbox" name="favorite-country" value="italy"> Italy
-      </label>
-      <label>
-        <input type="checkbox" name="favorite-country" value="turkey"> Turkey
-      </label>
-      <label>
-        <input type="checkbox" name="favorite-country" value="america"> America
-      </label>
-      <label>
-        <input type="checkbox" name="favorite-country" value="israel"> Israel
-      </label>
-    </div>
-    <br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password"><br><br>
     <input type="submit" value="Submit">
   </form>
 </body>
 </html>
-
